--- a/modules/ROOT/pages/principles/docs-as-code.adoc
+++ b/modules/ROOT/pages/principles/docs-as-code.adoc
@@ -12,12 +12,12 @@ Whether working alone or on a team, proper version control is a must.
 
 === Feature branching
 
-As a general rule, [branch]`main` branch always contains production-ready code. This way, you can quickly release new docs without worry of it containing unfinished work or errors that'll break your site. Feature branches off of [branch]`main` contain in-progress work for upcoming releases. I prefer to scope these feature branches at the xref:./agile.adoc[Epic or Feature level] and merge completed feature docs into them. How you structure your tickets informs how you structure your branches.
+As a general rule, [branch]`main` branch always contains production-ready code. This way, you can quickly release new docs without worry of it containing unfinished work or errors that'll break your site. Feature branches off of [branch]`main` contain in-progress work for upcoming releases. I prefer to scope feature branches at the xref:./agile.adoc[Epic or Feature level] and merge completed child tickets into them. How you structure your tickets informs how you structure your branches, but keep those feature branches short-lived!
 
 .Feature branching (simple)
 image::feature-branching-simple.png[Feature branches without release branch]
 
-Branching in this way is more straight-forward the more "agile" a company's release schedule is. In other words, if a company releases a feature once it's complete, the feature branch containing the docs is simply merged to [branch]`main` come release time. However, if a company prefers a longer release runway (_cough_ waterfall! _cough_), I'll create a release branch off [branch]`main` to merge completed feature branches into.
+Feature branching is more straight-forward the more "agile" a company's release schedule is. In other words, if a company releases a feature once it's complete, the feature branch containing the docs is simply merged to [branch]`main` come release time. However, if a company prefers a longer release runway (_cough_! waterfall! _cough_!), I'll create a release branch off [branch]`main` to merge completed feature branches into.
 
 .Feature branching with a release branch
 image::feature-branching-release.png[Feature branches with release branch]
@@ -29,7 +29,7 @@ image::feature-branching-release-hotfix.png[Feature branches with release and ho
 
 === Naming conventions
 
-I prefer to name branches using ticket IDs, for example [branch]`feature/jira-123`. Descriptive names can become confusing, vague, or even inaccurate as development evolves. The associated ticket ID serves as a breadcrumb to the source of truth, in this case a Jira ticket. This ticket contains the most up-to-date information about the feature and is a more appropriate place for details than a branch name.
+I prefer to name branches using ticket IDs, for example [branch]`feature/id-123`. Descriptive names can become confusing, vague, or even inaccurate as development evolves. The associated ticket ID serves as a breadcrumb to the source of truth.
 
 [source,bash]
 ----
@@ -43,7 +43,7 @@ release/v1.1.0
 hotfix/v1.0.4
 ----
 
-This isn't the most alluring naming convention, but sometimes:
+This isn't the most alluring naming convention, but sometimes...
 
 [quote,Unix Philosophy]
 Clarity is better than cleverness
@@ -54,7 +54,7 @@ Before merging, I like to xref:#_testability[test] and xref:#_peer_review[peer r
 
 == Content reuse
 
-Docs-as-code encourages tech writers to borrow from the coding concept of **modular programming**. This term describes how programmers separate code into independent files depending on the purpose it serves. This approach leads to less manual work and makes managing code must easier. Why write something three or four times when you can write it once and reuse it? This is transferrable to docs, of course.
+Docs-as-code encourages tech writers to borrow from the coding concept of **modular programming**. This term describes how programmers separate code into independent files depending on the purpose it serves. This approach leads to less manual work and makes managing code easier. Why write something three or four times when you can write it once and reuse it? This is transferrable to docs, of course.
 
 Writing docs that are more flexible and narrowly scoped may take some initial planning, but the approach is ultimately more efficient, not to mention less of a headache to manage. Proper content reuse also creates consistency for readers, making the docs easier to read.
 
@@ -62,14 +62,14 @@ Content reuse goes by different names depending on the software I'm using, but t
 
 === Examples depending on software
 
-In *MadCap Flare*, I can use a snippet to remind users where to view their user permissions, for example. This is helpful when a task requires a specific permission. If the path to this location changes or I want to update wording in this blurb, I only need to update the snippet once.
+In *MadCap Flare*, I can use a snippet to remind users where to view their user permissions, for example. This is helpful when a task requires a specific permission. If the path to this location changes, or I want to update wording in this blurb, I only need to update the snippet once.
 
 [source,xml]
 ----
-<MadCap:snippetBlock src="../Resources/Snippets/view-user-permissions.flsnp" />
+<MadCap:snippetBlock src="../resources/snippets/view-user-permissions.flsnp" />
 ----
 
-In *Hugo*, I can create a custom shortcode with this information.
+In *Hugo*, I can create a custom shortcode with this information and reference it across the docs.
 
 [source,markdown]
 ----
@@ -85,13 +85,13 @@ When writing with AsciiDoc in *Antora*, I can use the `include::` directive to d
 
 === Topic typing
 
-Another valuable content reuse technique is topic typing. At it's most general, I prefer to organize content into three basic categories: **concept**, **task**, or **reference**.
+Another valuable content reuse technique is topic typing. This approach categorizes content based on the purpose it serves as well as its style and theme. Generally, I prefer to organize content into three basic categories: *concept*, *task*, or *reference*.
 
-* **Concept:** used when introducing or explaining an idea, like the overview of a complex feature.
-* **Task:** used when instructing user action, like enabling a feature within a product.
-* **Reference:** used when providing a large amount of scannable information, like tabular data about compatibility.
+* *Concept:* used when introducing or explaining an idea, like the overview of a complex feature
+* *Task:* used when instructing user action, like enabling a feature within a product
+* *Reference:* used when providing a large amount of scannable information, like tabular data about compatibility
 
-Dedicating a page to a specific topic type is enough modularity sometimes. For increased reuse potential, I can make each piece of content within a page more modular, if desired. For example:
+Dedicating a page to a specific topic type is enough modularity sometimes. For increased reuse potential, I'll make each piece of content within a page more modular, if desired. For example:
 
 [source,asciidoc]
 ----
@@ -112,7 +112,7 @@ NOTE: Structuring content for reuse is easier to do from the start but don't fee
 
 Docs are best when they're collaborative. And the most fruitful collaboration often takes the form of reviews. Tech writers usually aren't the expert on the subject they're writing--for this, there's the xref:#_subject_matter_expert_sme_review[subject matter expert (SME) review]. And authors usually aren't the best editors of their own work--for this, there's the xref:#_peer_review[peer review].
 
-Reviews might look differently depending on personal preference and the software used. I've conducted reviews of plain text docs in GitHub as part of a Pull Request, as well as in exported Word docs uploaded to SharePoint with the Track Changes feature turned on.
+Reviews might look different depending on personal preference and the software used. I've conducted reviews of plain text docs in GitHub as part of a Pull Request, as well as in exported Word docs uploaded to SharePoint with the Track Changes feature turned on.
 
 As is the rule with all collaboration, work with others to find the best compromise.
 
@@ -124,11 +124,13 @@ Complete SME reviews before requesting peer review.
 
 === Peer review
 
-Once the SME signs off on the docs, tech writers can review each other's work. Peer review considers style guide adherence, proper information architecture, consistency in tone, grammar, and usage. Always communicate feedback professionally and consider the author's feelings. This isn't a free pass for ruthless criticism. Complete this review as part of a GitHub Pull Request.
+Once the SME signs off on the docs, tech writers can review each other's work. Peer review considers style guide adherence, proper information architecture, and consistency in tone, grammar, and usage. Always communicate feedback professionally and consider the author's feelings. Peer review isn't a free pass for ruthless criticism!
+
+Complete this review as part of a GitHub Pull Request.
 
 === Feature review
 
-Once a feature is nearing **feature complete** status, it should consider the opinion of other stakeholders (Product Management, Engineering, Professional Services, Support). This review takes into account higher-level feedback from a wider audience and serves as a jumping off point for training. You'll likely receive lots of out-of-scope feedback from this review, so create tickets in your backlog and plan accordingly. Not everything requested in this review can make the initial release.
+Once a feature is nearing *feature complete* status, it should consider the opinion of other stakeholders (Product Management, Engineering, Professional Services, Support). This review takes into account higher-level feedback from a wider audience and serves as a jumping off point for training. You'll likely receive lots of out-of-scope feedback from this review, so create tickets in your backlog and plan accordingly. Not everything requested in this review can make the initial release.
 
 == Testability
 
@@ -138,7 +140,7 @@ Tech writers don't just write the docs. They should test them too!
 
 Validating documentation doesn't need to be purely subjective. Tools like link:https://vale.sh[Vale^] deliver data around style guide adherence and readability. Vale lets you customize existing style guides and create your own rules to reflect your organization's preferences. It's a very powerful tool.
 
-Check out xref::page$/tools/vale.adoc[my personal Vale configuration for this portfolio.]
+Check out xref::page$/tools/vale.adoc[my personal Vale configuration for this portfolio].
 
 === Acceptance criteria
 
@@ -152,4 +154,4 @@ include::partial$acceptance-criteria/note-about-ac.adoc[]
 
 === Reviews
 
-xref:#_subject_matter_expert_sme_review[SME] and xref:#_peer_review[peer] reviews serve as the catch-all test for what escapes linters and acceptance criteria. This is the arena for "I think this paragraph is confusing" or "I would word this differently" feedback. Tech writers are human after all, writing documentation for other humans, so docs should pass these subjective criteria, too. Effective tech writers must develop the ability to synthesize murky (and sometimes conflicting) feedback into clear docs.
+xref:#_subject_matter_expert_sme_review[SME] and xref:#_peer_review[peer] reviews serve as catch-all tests for what escapes linters and acceptance criteria. This is the arena for "I think this paragraph is confusing" or "I would word this differently" type of feedback. Tech writers are human after all, writing documentation for other humans, so docs should consider these subjective criteria, too. Effective tech writers must develop the ability to synthesize murky (and sometimes conflicting) feedback into clear docs.
