--- a/modules/ROOT/pages/tools/antora.adoc
+++ b/modules/ROOT/pages/tools/antora.adoc
@@ -1,14 +1,14 @@
 = Antora
 
-image:icons/antora.png[Antora logo,50,50] 
+image:icons/antora.png[Antora logo,50,50]
 
 I had to try Antora after seeing its tagline: "The multi-repository documentation site generator for tech writers who love writing in AsciiDoc." I was so please with it, I used it for this portfolio site! Compared to Flare and Hugo, it stands out with how it leverages Git and AsciiDoc to scale docs with ease.
 
 == Structured configuration
 
-Antora's project structure is strict, which is actually a strength. It requires you to have separate repositories for your content files, build configuration, and site's theming. This enforces commits to occur in their own context, making complex projects easier to compartmentalize. Edits to your `antora-playbook.yml`, for example, won't show up in a PR that updates feature docs. While there's a slight learning curve to adopt Antora's conventions, it's worth it to have distinct separation of concerns. 
+Antora's project structure is strict, which is actually a strength. It requires you to have separate repositories for your content files, build configuration, and site's theming. This enforces commits to occur in their own context, making complex projects easier to compartmentalize. Edits to your `antora-playbook.yml`, for example, won't show up in a PR that updates feature docs. While there's a slight learning curve to adopt Antora's conventions, it's worth it to have distinct separation of concerns.
 
-Since Antora sources content from repo URLs, Git becomes a powerful tool in your deployment pipeline. For example, I've configured this project to deploy feature branches according to a pattern search for `'feature/*`. 
+Since Antora sources content from repo URLs, Git becomes a powerful tool in your deployment pipeline. For example, I've configured this project to deploy feature branches according to a pattern search for `'feature/*`.
 
 .Branch pattern in playbook.yml
 [source,yaml]
@@ -18,7 +18,7 @@ include::example$/playbook.yml[]
 
 New branches with the `feature/` naming convention are generated in the next build. Deleted feature branches are removed.
 
-Click the version toolbar in the lower-left corner of the screen to display the `feature-abc` and [branch]`feature-xyz` branch prerelease content (-alpha).
+&#128072; Click the version toolbar in the lower-left corner of the screen to display the [branch]`feature-abc` and [branch]`feature-xyz` branch prerelease content (-alpha).
 
 == Easy scaling
 
@@ -32,13 +32,13 @@ Traditional Markdown is wonderful in its simplicity, but it's underpowered for l
 
 === Includes
 
-The `\includes::` directive makes including other files a simple one-line call. This makes modular docs easy, as you can just include smaller files on a page. It's my favorite AsciiDoc feature and changes the way I write my docs.
+The `\includes::` directive makes including other files a simple one-line call. This makes creating modular docs easy, as you can just include smaller files on a page. It's my favorite AsciiDoc feature and changes the way I write my docs.
 
-Antora builds on this feature with its link:https://docs.antora.org/antora/latest/family-directories/[family directories]. Example, attachments, images, and partials are their own "family" which means they have their own default root locations. This make sourcing specific content intuitive and predictable. For example, relative paths turn ugly at certain port: `\include::../../../../../feature-xyz/modular-xyz.adoc`. With Antora's family directories, you can reference the family's root directory (in this case "example") for a cleaner path: `\include::example$/feature-xyz/modular-xyz.adoc`.
+Antora builds on this feature with its link:https://docs.antora.org/antora/latest/family-directories/[family directories]. Example, attachments, images, and partials are their own "family" which means they have their own default root locations. This make sourcing specific content intuitive and predictable. For example, relative paths can turn ugly at a certain port: `\include::../../../../../feature-xyz/modular-xyz.adoc`. With Antora's family directories, you can reference the family's root directory (in this case "example$") for a cleaner path: `\include::example$/feature-xyz/modular-xyz.adoc`.
 
 === Conditional directives
 
-Conditional directives in AsciiDoc help filter content based on a defined (or not defined) attribute. This concept, first introduced in C programming, provides the [command]`ifdef` and [command]`ifndef` directives respectively. For tech writers, these commands help single-source docs that need to differentiate between online vs. print content or product output for a specific audience.
+Conditional directives in AsciiDoc help filter content based on a defined (or not defined) attribute. This concept, first introduced in C programming, provides the [command]`ifdef` and [command]`ifndef` directives respectively. For tech writers, these commands help single-source docs that need to differentiate between online vs. print content or output for a specific audience.
 
 Here are two common examples that use the [command]`ifdef` directive to "hide" administrator and internal admonitions unless you specify the attribute explicitly.
 
@@ -48,9 +48,7 @@ Here are two common examples that use the [command]`ifdef` directive to "hide" a
 include::example$/antora-conditional-directives.adoc[]
 ----
 
-To build output that includes these audiences, you can set the desired attribute in your [file]`antora-playbook.yml` or in your terminal command, like [command]`npx antora --fetch --attribute=admin antora-playbook.yml`
-
-NOTE: You can specify multiple attributes with comma separation: [command]`npx antora --fetch --attribute=admin,internal playbook.yml`.
+To build output that includes these audiences, you can set the desired attribute in your [file]`antora-playbook.yml` or with the --attribute option via the command line: [command]`npx antora --fetch --attribute=admin antora-playbook.yml`
 
 == Versioning
 
