--- a/modules/ROOT/pages/tools/vale.adoc
+++ b/modules/ROOT/pages/tools/vale.adoc
@@ -1,10 +1,10 @@
 = Vale
 
-Lint your docs, stay up to date with upstream style guide changes, and customize your own rules and vocabulary to reflect your style preferences with link:https://vale.sh[Vale^].
+Lint your docs, stay current with upstream style guide changes, and customize your own rules and vocabulary to reflect your style preferences with link:https://vale.sh[Vale^].
 
 image:icons/vale.png[Vale in terminal,500,auto]
 
-There's a difference between claiming to follow a style guide and _actually_ testing against it. Vale is a tool that can bridge that gap and keep your writing honest. Nobody can keep all style guide rules in their head, and with Vale, you won't have to. Vale is a command line tool at its core, but there's good plugin support in popular text editors like VS Code and Neovim.
+There's a difference between claiming to follow a style guide and _actually_ testing against it. Vale is a tool that can bridge that gap and keep your writing honest. Nobody can keep all those style guide rules in their head, and with Vale, you won't have to! Vale is a command line tool at its core, but there's good plugin support in popular text editors like VS Code and Vim.
 
 Here's how I've configured Vale for this project. See my customizations below.
 
@@ -29,7 +29,7 @@ styles/
 
 == Customizations
 
-One of Vale's greatest strength is the ability to customize it. If your organization's style rules differ slightly from Google's, for example, Vale makes it possible to adjust rules to your liking. You can even update the rule's description text, severity, and style guide hyperlink. In the past, I've linked custom rules to the doc team's Confluence which provided a rationale for the decision.
+One of Vale's greatest strength is the ability to customize it. If your organization's style rules differ slightly from Google's, for example, Vale makes it possible to adjust rules to your liking. You can even update the rule's description text, severity, and style guide hyperlink. In the past, I've linked custom rules to the doc team's Confluence which provided a detailed rationale for certain style decisions.
 
 There's a proper way to ensure your customizations aren't overwritten, though. It's not enough to remove rules you don't want to apply from a chosen style guide. Once you run `vale sync` or reinstall the app, those local changes are overwritten by the upstream source. To preserve customization, it's better to turn off specific rules in your xref:_vale_configuration_file[.vale.ini configuration file]. For rules you want to keep but modify, extend them in your own custom style. You can then store this configuration in version control where they'll persist across syncs and installs.
 
@@ -45,7 +45,8 @@ Update your `.gitignore` to filter out upstream packages. Vale can always downlo
 !.github/styles/portfolio
 ----
 ====
-=== Vale configuration file 
+
+=== Vale configuration file
 
 Here's my vale configuration for this project. In general, I prefer Google's style guide to Microsoft or RedHat since I find it a bit less rigid and more conversational. This helps me fight jargon and keep docs simple.
 
@@ -61,9 +62,9 @@ include::example$vale/vale.ini[]
 
 === Vocabulary
 
-I've maintained a custom vocab list at `styles/config/vocabularies/portfolio`. All terms in this list get added as an "exception" to each style rule. This centralized list is easy to manage and because it's separate from the synced packages, it won't be overwritten over time.
+I've maintained a custom vocab list for Vale at `styles/config/vocabularies/portfolio`. All terms in this list get added as an "exception" to each style rule. This centralized list separates it from the synced packages, so it won't be overwritten by upstream changes over time.
 
-.Current portfolio vocab list 
+.Current portfolio vocab list
 [source, txt]
 ----
 include::example$vale/vocab.txt[]
