--- a/modules/ROOT/pages/principles/docs-as-code/docs-as-code.adoc
+++ b/modules/ROOT/pages/principles/docs-as-code/docs-as-code.adoc
@@ -8,8 +8,10 @@ image:docs-as-code.jpeg[decorative image of Docs as Code process]
 
 Whether working alone or on a team, proper version control is a must.
 
-include::page$/principles/docs-as-code/git-feature-branching-workflow.adoc[]
+=== Feature branch workflow
+include::page$/principles/docs-as-code/git-feature-branch-workflow.adoc[]
 
+=== Feature branch naming conventions
 include::page$/principles/docs-as-code/git-feature-branch-naming-convention-rationale.adoc[]
 
 include::example$/git/feature-branch-naming-convention-example.bash[]
@@ -18,46 +20,61 @@ include::example$/git/feature-branch-naming-convention-example.bash[]
 
 Before merging, I like to xref:#_testability[test] and xref:#_peer_review[peer review] my docs as part of a Pull Request. If possible, I'll deploy a [branch]`feature` or [branch]`dev` branch to a staging environment and share with internal shareholders before the release.
 
+== Content reuse
 // content reuse rationale
 include::page$/principles/docs-as-code/content-reuse-rationale.adoc[]
 
+=== Examples depending on software
 // content reuse examples
 include::page$/principles/docs-as-code/content-reuse-examples-with-different-software.adoc[]
 
 // topic typing rationale
+== Topic typing
 include::page$/principles/docs-as-code/topic-typing-rationale.adoc[]
+
+// topic typing example
+include::example$/docs-as-code/topic-typing-feature-xyz.adoc[]
 
 // note: not everything must be modular
 include::page$/principles/docs-as-code/content-reuse-determination-note.adoc[]
 
-// topic typing example - TODO: put this before note admonition?
-include::example$/docs-as-code/topic-typing-feature-xyz.adoc[]
-
+== Reviews
 // reviews rationale
 include::page$/principles/docs-as-code/reviews-rationale.adoc[]
 
-// sme review rationale
+=== SME review
+
+// SME review rationale
 include::page$/principles/docs-as-code/sme-review-rationale.adoc[]
+
+=== Peer review
 
 // peer review rationale
 include::page$/principles/docs-as-code/peer-review-rationale.adoc[]
+
+=== Feature review
 
 // feature review rationale
 include::page$/principles/docs-as-code/feature-review-rationale.adoc[]
 
 == Testability
+
 // testing rationale
-include::page$/principles/docs-as-code/testability.adoc[]
+include::page$/principles/docs-as-code/testability-rationale.adoc[]
 
 === Linters
-// testing with linters
-Validating documentation doesn't need to be purely subjective. Tools like link:https://vale.sh[Vale^] deliver data around style guide adherence and readability. Vale lets you customize existing style guides and create your own rules to reflect your organization's preferences. It's a very powerful tool.
 
-Check out xref::page$/tools/vale.adoc[my personal Vale configuration for this portfolio].
+// testing with linters
+include::page$/principles/docs-as-code/linters-rationale.adoc
+
+// personal vale config link
+include::partial$/personal-vale-config-link.adoc
 
 === Acceptance criteria
+
 // testing against acceptance criteria
-Another test of documentation is to verify the writing against the ticket's acceptance criteria. This calls for clear, demonstrative acceptance criteria that can pass or fail such a test.
+include::page$/principles/agile/acceptance-criteria-rationale.adoc[]
+
 // acceptance criteria examples
 Here's a couple of examples to show what I mean:
 
@@ -66,5 +83,6 @@ include::example$acceptance-criteria/good-ac.adoc[]
 include::partial$acceptance-criteria/note-about-ac.adoc[]
 
 === Reviews
+
 // testing through reviews
 xref:#_subject_matter_expert_sme_review[SME] and xref:#_peer_review[peer] reviews serve as catch-all tests for what escapes linters and acceptance criteria. This is the arena for "I think this paragraph is confusing" or "I would word this differently" type of feedback. Tech writers are human after all, writing documentation for other humans, so docs should consider these subjective criteria, too. Effective tech writers must develop the ability to synthesize murky (and sometimes conflicting) feedback into clear docs.
