--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -1,7 +1,7 @@
 * xref:index.adoc[Welcome]
 * Principles
-** xref:principles/docs-as-code/docs-as-code.adoc[]
-** xref:principles/agile/agile.adoc[]
+** xref:principles/docs-as-code.adoc[]
+** xref:principles/agile.adoc[]
 * Tools
 ** xref:tools/git.adoc[]
 ** xref:tools/vale.adoc[]
