fix links and urls

--- a/modules/ROOT/pages/principles/version-control/git-feature-branch-workflow.adoc
+++ b/modules/ROOT/pages/principles/version-control/git-feature-branch-workflow.adoc
@@ -1,4 +1,4 @@
-As a general rule, [branch]`main` branch always contains production-ready code. This way, you can quickly release new docs without worry of it containing unfinished work or errors that'll break your site. Feature branches off of [branch]`main` contain in-progress work for upcoming releases. I prefer to scope feature branches at the xref:./agile.adoc[Epic or Feature level] and merge completed child tickets into them. How you structure your tickets informs how you structure your branches, but keep those feature branches short-lived!
+As a general rule, [branch]`main` branch always contains production-ready code. This way, you can quickly release new docs without worry of it containing unfinished work or errors that'll break your site. Feature branches off of [branch]`main` contain in-progress work for upcoming releases. I prefer to scope feature branches at the xref:$pages/principles/agile.adoc[Epic or Feature level] and merge completed child tickets into them. How you structure your tickets informs how you structure your branches, but keep those feature branches short-lived!
 
 .Feature branching (simple)
 image::feature-branching-simple.png[Feature branches without release branch]
